cambio de imagen principal

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,11 +3,16 @@
     "Adriana",
     "animi",
     "architecto",
+    "boton",
     "brand",
     "calm",
+    "card",
+    "Card",
     "carousel",
     "carrousel",
+    "Concesioario",
     "consequuntur",
+    "debatis",
     "deserunt",
     "doloremque",
     "dolorum",
@@ -19,7 +24,9 @@
     "fugit",
     "good",
     "hero",
+    "imagenes",
     "incidunt",
+    "Integracion",
     "inventore",
     "iure",
     "Karzon",
@@ -29,9 +36,13 @@
     "pariatur",
     "perferendis",
     "quas",
+    "quis",
+    "Quistás",
     "raiting",
     "repellendus",
     "ride",
+    "Rodriguez",
+    "slide",
     "soluta",
     "tatatata",
     "textico",
