--- a/.hintrc
+++ b/.hintrc
@@ -5,6 +5,12 @@
   "hints": {
     "no-inline-styles": "off",
     "axe/name-role-value": "off",
-    "axe/structure": "off"
+    "axe/structure": "off",
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
+    ]
   }
 }
